<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtPrecoEtanol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_etanol"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPrecoEtanol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPrecoEtanol"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/txtPrecoGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPrecoEtanol"
        android:text="@string/preco_gasolina"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPrecoGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPrecoGasolina"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/txtRendimentoComEtanol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPrecoGasolina"
        android:text="@string/kml_etanol"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtRendimentoComEtanol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtRendimentoComEtanol"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/txtRendimentoGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRendimentoComEtanol"
        android:text="@string/kml_gasolina"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtRendimentoGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtRendimentoGasolina"
        android:textAlignment="textEnd" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRendimentoGasolina"
        android:text="@string/btnCalcular" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCalcular"
        android:text="@string/btnLimpar" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLimpar"
        android:text="@string/btnSair" />

    <TextView
        android:id="@+id/txtMelhorAbastecerCom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSair"
        android:text="@string/formula"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMelhorCombustivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMelhorAbastecerCom"
        android:text="@string/melhor_combustivel"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/red"/>

</RelativeLayout>